gcppubsub/config/300-gcppubsubchannel.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcp-pubsub-channel-controller
  namespace: knative-eventing
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      clusterChannelProvisioner: gcp-pubsub
      role: controller
  template:
    metadata:
      labels: *labels
    spec:
      serviceAccountName: gcp-pubsub-channel-controller
      containers:
        - name: controller
          image: github.com/knative/eventing-contrib/gcppubsub/pkg/controller/cmd
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcp-pubsub-channel-dispatcher
  namespace: knative-eventing
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      clusterChannelProvisioner: gcp-pubsub
      role: dispatcher
  template:
    metadata:
      labels: *labels
    spec:
      serviceAccountName: gcp-pubsub-channel-dispatcher
      containers:
        - name: dispatcher
          image: github.com/knative/eventing-contrib/gcppubsub/pkg/dispatcher/cmd
---

apiVersion: v1
kind: Service
metadata:
  name: gcp-pubsub-dispatcher
  namespace: knative-eventing
spec:
  type: ClusterIP
  selector:
    clusterChannelProvisioner: gcp-pubsub
    role: dispatcher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# Needed by the GCP PubSub Channel to communicate with GCP PubSub.
# Please uncomment if ISTIO automatic sidecar injector is enabled on the cluster, and 
# the GCP dispatcher pod in knative-eventing namespace runs with a ISTIO sidecar.
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: gcppubsub-bus-ext
#   namespace: knative-eventing
# spec:
#   hosts:
#   - "*.googleapis.com"
#   - "accounts.google.com"
#   ports:
#   - number: 443
#     name: https
#     protocol: HTTPS
#   location: MESH_EXTERNAL
